--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -1,8 +1,6 @@
+<h1>Hello World</h1>
 <ul>
-    <li>
-        <p><a href="/polls">A Polls Application</a></p>
-    </li>
-    <li>
-        <p><a href="/hello">Test the session</a></p>
-    </li>
+    <li><p><a href="/polls">A Polls Application</a></p></li>
+    <li><p><a href="/hello">Test the session</a></p></li>
+    <li><a href="/autos">Autos CRUD</a></li>
 </ul>
