--- a/home/templates/base_bootstrap.html
+++ b/home/templates/base_bootstrap.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,6 +9,8 @@
 <meta name="dj4e" content="116ce3668c6d5c744252b9a1cb67b8d4">
 
 <meta name="dj4e-code" content="42161827482858">
+
+<link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 
 <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
