--- a/home/templates/base_menu.html
+++ b/home/templates/base_menu.html
@@ -1,4 +1,5 @@
 {% extends "base_bootstrap.html" %}
+{% load app_tags %}
 {% block navbar %}
 {% load crispy_forms_tags %}
 <nav class="navbar navbar-default navbar-inverse">
@@ -19,7 +20,7 @@
         </li>
         <li class="dropdown">
             <a href="#" data-toggle="dropdown" class="dropdown-toggle">
-                <img style="width: 25px;" src="#"/><b class="caret"></b>
+                <img style="width: 25px;" src="{{ user|gravatar:60 }}"/><b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
                 <li><a href="{% url 'logout' %}?next={% url 'ads:all' %}">Logout</a></li>
