--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -1,7 +1,9 @@
+{% load static %}
 <h1>Hello World</h1>
 <ul>
     <li><p><a href="/polls">A Polls Application</a></p></li>
     <li><p><a href="/hello">Test the session</a></p></li>
     <li><p><a href="/autos">Autos CRUD</a></p></li>
-    <li><a href="/cats">Cats CRUD</a></li>
+    <li><p><a href="/cats">Cats CRUD</a></p></li>
+    <li><p><a href="/ads">Ads CRUD</a></p></li>
 </ul>
