--- a/ads/templates/ads/ad_detail.html
+++ b/ads/templates/ads/ad_detail.html
@@ -34,6 +34,13 @@
     onclick="document.getElementById('overlay').style.display = 'block';">
 {% endif %}
 <p>{{ ad.text }}</p>
+{% if ad.tags.all %}
+<p>Tags: 
+  {% for tag in ad.tags.all %}
+  <span style="border:1px grey solid; background-color: LightGreen;">{{ tag }}</span>
+  {% endfor %}
+</p>
+{% endif %}
 
 <p>Price: ${{ ad.price }}</p>
 
